--- a/wallettemplate/build.gradle
+++ b/wallettemplate/build.gradle
@@ -13,8 +13,8 @@ dependencies {
     implementation 'org.fxmisc.easybind:easybind:1.0.3'
     implementation 'de.jensd:fontawesomefx:8.0.0'
     implementation 'com.google.zxing:core:3.3.3'
-    implementation "org.slf4j:slf4j-api:1.8.0-beta4"
-    implementation 'org.slf4j:slf4j-jdk14:1.8.0-beta4'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.slf4j:slf4j-jdk14:1.7.25'
 }
 
 javafx {
@@ -42,8 +42,6 @@ jlink {
 
         requires 'javafx.graphics'
         requires 'javafx.controls'
-
-        requires 'org.slf4j'
     }
     jpackage {
         // See https://badass-jlink-plugin.beryx.org/releases/latest/#_jpackage for
