--- a/wallettemplate/build.gradle
+++ b/wallettemplate/build.gradle
@@ -8,6 +8,7 @@ plugins {
 
 dependencies {
     implementation project(':bitcoinj-core')
+    implementation project(':airgaplib')
 
     implementation 'com.google.guava:guava:27.1-android'
     implementation 'de.jensd:fontawesomefx:8.0.0'
