WIP path support, airgapfx module with camera view
* Make UnsignedTxQrGenerator a service object with Wallet passed to constructor
* Use the Wallet to find Derivation paths of transaction inputs
* Paths are BIP 32 not BIP 44 (though BIP44_ACCOUNT_PATH var is defined and ready to try)
* Add airgapfx module with camera view that works in modular JDK

--- a/airgaplib/build.gradle
+++ b/airgaplib/build.gradle
@@ -7,12 +7,15 @@ plugins {
 }
 
 sourceCompatibility = 11
+targetCompatibility = 11
 
 def jacksonVersion = '2.9.8'
 
 dependencies {
     implementation project(':bitcoinj-core')
-    
+
+    implementation 'com.google.guava:guava:27.1-android'
+
     implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
     implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
 
