--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include 'examples'
 project(':examples').name = 'bitcoinj-examples'
 
 include 'airgaplib'
+include 'airgapfx'
 
 
 if (GradleVersion.current().compareTo(minFxGradleVersion) >= 0 && JavaVersion.current().isJava11Compatible()) {
@@ -31,3 +32,4 @@ if (GradleVersion.current().compareTo(minFxGradleVersion) >= 0 && JavaVersion.cu
 } else {
     System.err.println "Skipping wallettemplate, requires ${minFxGradleVersion}+ and Java 11+, currently running: ${GradleVersion.current()} and Java ${JavaVersion.current()}"
 }
+
