--- a/airgapfx/build.gradle
+++ b/airgapfx/build.gradle
@@ -23,7 +23,15 @@ dependencies {
         exclude group: 'com.nativelibs4java', module: 'bridj'
     }
 
+    //implementation 'com.google.zxing:core:3.3.3'
+    //implementation 'com.google.zxing:javase:3.3.3'
+    implementation "com.github.msgilligan.zxing:core:msgilligan-modular-javase-SNAPSHOT"
+    implementation ("com.github.msgilligan.zxing:javase:msgilligan-modular-javase-SNAPSHOT") {
+        exclude group: 'com.github.msgilligan.zxing', module: 'core'
+    }
+
     implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.slf4j:slf4j-jdk14:1.7.25'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
