GitLab CI: Print URL jpackage tool is to be downloaded from

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ before_script:
   - apt-get update
   - apt-get -y upgrade
   - apt-get -y install openjdk-11-jdk gradle curl rpm fakeroot
+  - echo Downloading jpackage tool from $JDK14_URL
   - curl --silent --show-error -O $JDK14_URL
   - tar xf $JDK14_FILENAME
   - $BADASS_JLINK_JPACKAGE_HOME/bin/jpackage --version
