--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,11 +7,15 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        java: [ '11', '12' ]
+
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 11
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
-        java-version: 11
+        java-version: ${{ matrix.java }}
     - name: Build with Gradle
       run: ./gradlew build --stacktrace
