--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,16 +4,14 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        java: [ '11', '12' ]
-
+        java: [ '11', '12', '13' ]
+    name: JDK ${{ matrix.java }}
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK ${{ matrix.java }}
+    - name: Set up JDK
       uses: actions/setup-java@v1
       with:
         java-version: ${{ matrix.java }}
