--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '11', '12', '13' ]
+        java: [ '11', '12' ]
     name: JDK ${{ matrix.java }}
     steps:
     - uses: actions/checkout@v1
