--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,8 +21,13 @@ jobs:
         java-version: ${{ matrix.java }}
     - name: Build with Gradle
       run: ./gradlew -Ddownload.jpackage=true build bitcoinj-walletfx-template:jpackage --stacktrace
-    - name: Upload image as artifact
+    - name: Upload jlink image as artifact
       uses: actions/upload-artifact@master
       with:
         name: wallettemplate-${{ matrix.os }}-jdk${{ matrix.java }}-image
         path: bitcoinj-walletfx-template/build/image
+    - name: Upload jpackage directory as artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: wallettemplate-${{ matrix.os }}-jdk${{ matrix.java }}-jpackage
+        path: bitcoinj-walletfx-template/build/jpackage
