--- a/bitcoinj-walletfx-template/build.gradle
+++ b/bitcoinj-walletfx-template/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'eclipse'
     id 'application'
     id 'org.openjfx.javafxplugin'           version '0.0.8'
-    id 'org.beryx.jlink'                    version '2.15.1'
+    id 'org.beryx.jlink'                    version '2.16.0'
     id 'org.javamodularity.moduleplugin'    version "1.5.0"
     id "de.undercouch.download"             version "4.0.0"
 }
@@ -74,13 +74,10 @@ jlink {
     jpackage {
         // See https://badass-jlink-plugin.beryx.org/releases/latest/#_jpackage for
         // where the plugin's jpackage task finds the path to the jpackage tool by default
-        // (Currently you need to manually install a OpenJDK 14 Early Access Build including jpackage)
-        //jpackageHome = System.getenv('BADASS_JLINK_JPACKAGE_HOME')
         if (Boolean.getBoolean('download.jpackage')) {
             jpackageHome = downloadJPackage()
         }
         skipInstaller = false
-        identifier = appName
     }
 }
 
@@ -89,18 +86,21 @@ jlink {
 
 /** @return  [url, extension, directory] */
 String[] getJPackageCoordinates() {
+    def jpackageBaseUrl = 'https://s3-us-west-2.amazonaws.com/static.msgilligan.com/jpackage'
+    def jpackageVersionString = 'openjdk-14-jpackage%2B1-49'
+
     if(os.macOsX) return [
-            'https://download.java.net/java/early_access/jpackage/1/openjdk-14-jpackage+1-35_osx-x64_bin.tar.gz',
+            "${jpackageBaseUrl}/${jpackageVersionString}_osx-x64_bin.tar.gz",
             'tar.gz',
             'jdk-14.jdk/Contents/Home'
     ]
     if(os.windows) return [
-            'https://download.java.net/java/early_access/jpackage/1/openjdk-14-jpackage+1-35_windows-x64_bin.zip',
+            "${jpackageBaseUrl}/${jpackageVersionString}_windows-x64_bin.zip",
             'zip',
             'jdk-14'
     ]
     return [
-            'https://download.java.net/java/early_access/jpackage/1/openjdk-14-jpackage+1-35_linux-x64_bin.tar.gz',
+            "${jpackageBaseUrl}/${jpackageVersionString}_linux-x64_bin.tar.gz",
             'tar.gz',
             'jdk-14'
     ]
