Add app-version option in jpackage
(Hoping this fixes a Linux rpmbuild issue)

--- a/bitcoinj-walletfx-template/build.gradle
+++ b/bitcoinj-walletfx-template/build.gradle
@@ -78,6 +78,9 @@ jlink {
             jpackageHome = downloadJPackage()
         }
         skipInstaller = false
+
+        imageOptions = ["--app-version", version]
+        installerOptions = ["--app-version", version]
     }
 }
 
