--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ jobs:
         os: [ubuntu-latest, macOS-latest]
         # TODO: Fix windows tests and re-enable windows
         #os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [ '11', '12' ]
+        java: [ '11', '17' ]
       fail-fast: false
     name: JAVA ${{ matrix.java }} OS ${{ matrix.os }}
     steps:
@@ -20,7 +20,7 @@ jobs:
       with:
         java-version: ${{ matrix.java }}
     - name: Build with Gradle
-      run: ./gradlew -Ddownload.jpackage=true build bitcoinj-walletfx-template:jpackage --info --stacktrace
+      run: ./gradlew build bitcoinj-walletfx-template:jpackage --info --stacktrace
     - name: Upload jpackage directory as artifact
       uses: actions/upload-artifact@master
       with:
