--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ jobs:
         os: [ubuntu-latest, macOS-latest]
         # TODO: Fix windows tests and re-enable windows
         #os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [ '11', '17' ]
+        java: [ '17' ]
       fail-fast: false
     name: JAVA ${{ matrix.java }} OS ${{ matrix.os }}
     steps:
