--- a/bitcoinj-walletfx/build.gradle
+++ b/bitcoinj-walletfx/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'maven-publish'
     id 'eclipse'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.javamodularity.moduleplugin'    version "1.5.0"
+    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.javamodularity.moduleplugin'    version "1.8.10"
 }
 
 repositories {
